--- a/TASA.ipynb
+++ b/TASA.ipynb
@@ -3716,12 +3716,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import urllib.request\n",
+    "import re\n",
+    "def scrap():\n",
+    "    page = urllib.request.urlopen(r'https://timesofindia.indiatimes.com/india/reactions-to-bjp-win-expose-cpm-rift/articleshow/62127134.cms')\n",
+    "    data = page.read()\n",
+    "    soup = BeautifulSoup(data,'html.parser')\n",
+    "    pst = str(soup.find_all(\"p\"))\n",
+    "    cleanr = re.compile('<.*?>')\n",
+    "    cleantext = re.sub(cleanr,'',pst)\n",
+    "    textwithsomeerror = cleantext[0:len(cleantext)-1]\n",
+    "    print(textwithsomeerror)\n",
+    "    print(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NAC Jewellers, ICICI Prudential Life, Derby Jeans, Refrain from posting comments that are obscene, defamatory or inflammatory, and do not indulge in personal attacks, name calling or inciting hatred against any community. Help us delete comments that do not follow these guidelines by marking them offensive. Let's work together to keep the conversation civil., , 247187, 177194, 181/620.0 ov\n",
+      "                                            , 163/620.0 ov\n",
+      "                                            , 25947.4 ov\n",
+      "                                            , 24748.2 ov\n",
+      "                                            , 379/593.2 ov\n",
+      "                                            , Copyright © 2018 Bennett, Coleman &amp; Co. Ltd. All rights reserved. For reprint rights: Times Syndication Service\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "scrap()\n"
+   ]
   }
  ],
  "metadata": {
@@ -3740,7 +3775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
